--- a/style.css
+++ b/style.css
@@ -8,3 +8,124 @@
   
   --linear: linear-gradient(90deg, #574AE8 0%, #3EA1DB 100%);
 }
+
+@font-face {
+  font-family: 'Lexend';
+  src: url('./fontes/LexendDeca-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter Regular';
+  src: url('./fontes/Inter-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Inter Medium';
+  src: url('./fontes/Inter-Medium.ttf') format('truetype');
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: #F3F5F7;
+  font-family: 'Inter Medium';
+  font-weight: 500;
+}
+
+header{
+  color: var(--white);
+  padding: 20px;
+  background: var(--linear);
+}
+
+.page-titles{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Lexend', Arial;
+  font-size: 1.3em;
+}
+
+.page-titles a{
+  color: var(--white);
+  text-decoration: none;
+}
+
+.container{
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.container.header{
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+}
+
+.search-box{
+  margin-top: 40px;
+  padding: 10px;
+  display: flex;
+  background-color: rgba(255,255,255,0.2);
+}
+
+.search-box i{
+  cursor: pointer;
+}
+
+.search-box input{
+  width: 100%;
+  margin-left: 10px;
+  border: none;
+  background-color: transparent;
+  color: var(--white);
+  font-family: 'Inter Regular', Helvetica, sans-serif;
+}
+
+.post-title{
+  font-family: 'Lexend', 'Arial', sans-serif;
+  font-weight: normal;
+  color: var(--title);
+  margin: 10px 0;
+}
+
+.post-intro-text{
+  font-family: 'Inter';
+  color: var(--text);
+}
+
+main{
+  padding: 20px;
+}
+
+.container.main{
+  display: flex;
+  flex-direction: column;
+}
+
+.post{
+  background-color: var(--white);
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.date-post{
+  color: var(--text);
+}
+
+.fav{
+  position: absolute;
+  top: 20px; right: 20px;
+  color: var(--blue-dark);
+  cursor: pointer;
+}
+
+.fav:hover{
+  color: var(--blue);
+}
